--- a/index.html
+++ b/index.html
@@ -183,6 +183,12 @@
         </div>
         <div class="footer-section">
             <h3 class="section-title">Let's Message Me</h3>
+            <form action="" class="contact">
+                <input type="text" placeholder="Name">
+                <input type="email" name="" id="" placeholder="Email">
+                <textarea name="" id="" cols="30" rows="10" placeholder="Message"></textarea>
+                <input type="submit" value="Submit" class="btn-primary">
+            </form>
         </div>
     </footer>
 </body>
