added right now to the HTML

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
             </div>
         </div>
         <div class="footer-section">
-            <h3 class="section-title">Let's Message Me</h3>
+            <h3 class="section-title">Let's Message Me. Right Now</h3>
             <form action="" class="contact">
                 <input type="text" placeholder="Name">
                 <input type="email" name="" id="" placeholder="Email">
