--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         rel="stylesheet">
     <link rel="stylesheet" href="styles/portfolio.css">
     </link>
-    <css></css>
+    <script src="https://kit.fontawesome.com/2369c655c2.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -33,8 +33,8 @@
                 <p class="banner-discription">Shot what able cold new see hold.Friendly as an betrayed formerly he.
                     Morning because as to society
                     behaved moments.</p>
-                <button class="btn-primary">Download CV</button>
-                <button class="btn-primary">Contact</button>
+                <button class="btn-primary"><i class="fa-solid fa-download"></i>  Download CV</button>
+                <button class="btn-primary"><i class="fa-solid fa-phone"></i>  Contact</button>
             </div>
             <img class="profile-pic" src="images/hardy.png" alt="">
         </div>
@@ -165,7 +165,7 @@
                     </div>
                 </div>
             </div>
-            <div class="download-cv"><button class="btn-primary">Download CV</button></div>
+            <div class="download-cv"><button class="btn-primary"><i class="fa-solid fa-download"></i>  Download CV</button></div>
         </section>
     </main>
     <footer>
